<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/bike_stands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bike_stands"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/available_bike_stands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/available_bike_stands"
        app:layout_constraintStart_toStartOf="@+id/bike_stands"
        app:layout_constraintTop_toBottomOf="@+id/bike_stands" />

    <TextView
        android:id="@+id/available_bikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/available_bikes"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/available_bike_stands"
        app:layout_constraintTop_toBottomOf="@+id/available_bike_stands" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/number2"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <TextView
        android:id="@+id/address2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/name2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <TextView
        android:id="@+id/bike_stands2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/address2"
        app:layout_constraintStart_toEndOf="@+id/bike_stands"
        app:layout_constraintTop_toBottomOf="@+id/address2" />

    <TextView
        android:id="@+id/available_bike_stands2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/bike_stands2"
        app:layout_constraintStart_toEndOf="@+id/available_bike_stands"
        app:layout_constraintTop_toBottomOf="@+id/bike_stands2" />

    <TextView
        android:id="@+id/available_bikes2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/available_bike_stands2"
        app:layout_constraintStart_toEndOf="@+id/available_bikes"
        app:layout_constraintTop_toBottomOf="@+id/available_bike_stands2" />

</android.support.constraint.ConstraintLayout>
